# Robot-assistant-UI

./: .gitignore  README.md  continuous_wf_test.py  gradio_app.py  main.py  pyproject.toml  streamlit_app.py  test_audio.py  test_workflow.py
data/: locations.json
memories/: 09ec2015-f016-4904-bde5-068676ab46cc.json  0bd005d8-6aec-4de4-9c03-f87b1b7767f8.json  0ee39880-c809-49c9-933f-df4f13d9cc97.json  145ccb8e-41be-455d-af9d-645993d78912.json  2336802f-b27e-45a2-bd00-c70b03048a02.json  246b033c-4edc-405a-877f-fe8030b89a26.json  2ff4d42c-8d20-4f02-931a-a782f3d53d98.json  3140905e-ed5e-4874-bf1a-5fc8758b51fb.json  3ddd1c4a-076f-417a-b360-660d7dd2f64e.json  3e2472d4-5e2f-46f4-a0e7-44a98764b4c4.json  4bcf4483-1805-48f6-9763-cf6e4be09c79.json  4bf05522-9aa1-4058-9622-a8381afe8d38.json  501a4d2e-53c0-443e-b708-311563c7447b.json  50d353d1-a829-46df-84bc-2586e0199182.json  569792e0-f72f-4ee2-8fe7-640c696707fc.json  583d3a93-718f-4fe8-b9fb-7dad85fa26e0.json  5aad9b87-53ea-4706-b268-fc3aca2c7ae6.json  610485ff-e129-4aef-8f20-0cc48e42e98f.json  6707a619-a1c1-4b32-8c4e-539e6d1e35c6.json  67b82d6d-3704-4ef1-9a5d-84564bffb08a.json  6d91c43a-4446-4479-8a01-9bac01a50aec.json  6e1296b9-8494-4477-a2a2-65b791665001.json  79a8bcac-71de-4b6b-8669-9ea37a46a25e.json  83779fab-da7d-4f07-bd7d-bd15eea83d75.json  84cf6671-7681-4854-a11b-f45ef52cbade.json  957b53f3-1d2b-48a2-a795-8f35651f24ce.json  97199ad3-e1e0-419c-9487-f794f01df961.json  9a31b0a6-aef0-4fa9-a64d-ddeb28746cef.json  9a6e26fa-0438-4931-8803-7a8f8c60a388.json  9b388ac4-7a9a-498b-b233-ad01126621af.json  (+21 more)
src/: models.py  workflow.py
(+16 files in other folders)
